add logo and new secondary color

--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -4,11 +4,14 @@ const { title = "Need Hot Water Fast?" } = Astro.props;
 <section class="bg-primary text-primary-content py-16 px-6 text-center">
 	<div class="max-w-3xl mx-auto">
 		<h2 class="text-4xl font-bold mb-4">{title}</h2>
-		<p class="text-lg mb-8">
-			We’ll walk through your options, provide clear pricing, and schedule your install - no pressure, no surprises.
+		<p class="text-lg">
+			We’ll walk through your options, provide clear pricing, and schedule your install.
+		</p>
+				<p class="text-lg mb-8">
+			No pressure, no surprises.
 		</p>
 		<div class="flex flex-col justify-center gap-4">
-			<a href="tel:6165551234" class="btn btn-secondary text-base-content text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+			<a href="tel:6165551234" class="btn btn-secondary text-base-content text-lg w-64 h-fit py-2 flex items-center justify-between mx-auto text-center">
 				<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 					class="icon icon-tabler icons-tabler-outline icon-tabler-phone">
 					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -17,7 +20,7 @@ const { title = "Need Hot Water Fast?" } = Astro.props;
 				<p class="w-full">Call Now for Fastest Service</p>
 			</a>
 
-			<a href="#schedule-estimate" class="btn btn-outline text-lg w-72 h-fit py-2 flex items-center justify-between mx-auto text-center">
+			<a href="#schedule-estimate" class="btn btn-outline text-lg w-64 h-fit py-2 flex items-center justify-between mx-auto text-center">
 				<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 					class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock">
 					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
