--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,17 +7,11 @@ import logo from '../assets/images/whrc-logo.png';
     <div class="navbar-start">
         <a aria-label="Home | Water Heater Replacement Company of Grand Rapids"
             href="/"
-            class="btn btn-ghost max-w-70" >
+            class="navbar-start btn btn-ghost max-w-70" >
                 <img src={logo.src}
                     alt="Water Heater Replacement Company of Grand Rapids Logo"
                     class="h-12 object-contain max-h-[90%]" />
-                    Water Heater Replacement Company of Grand Rapids
         </a>
-        <!-- <a aria-label="Home | Water Heater Replacement Company of Grand Rapids"
-            href="/"
-            class=" max-w-56 btn btn-ghost h-fit text-md">
-                Water Heater Replacement Company of Grand Rapids
-        </a> -->
     </div>
     <div class="navbar-end">
         <!-- desktop menu -->
