--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,23 @@
 				<li><a class="link link-hover" href="/">Home</a></li>
 				<li><a class="link link-hover" href="/#frustrated-with-the-process">Frustrated With the Process?</a></li>
 				<li><a class="link link-hover" href="/#how-we-do-it-differently">We Do It Differently</a></li>
-				<li><a class="link link-hover" href="/products">Products</a></li>
+				<li>
+					<p class="pointer-events-none" aria-label="parent">Products</p>
+					<ul class="p-2">
+						<li>
+							<a aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Standard Tank Water Heaters</a>
+						</li>
+						<li>
+							<a aria-label="Power Vent Water Heaters" href="/products/power-vent-water-heaters/">Power Vent Water Heaters</a>
+						</li>
+						<li>
+							<a aria-label="Tankless Water Heaters" href="/products/tankless-water-heaters/">Tankless Water Heaters</a>
+						</li>
+						<li>
+							<a aria-label="Heat Pump Water Heaters" href="/products/heat-pump-water-heaters/">Heat Pump Water Heaters</a>
+						</li>
+					</ul>
+				</li>
 				<li><a class="link link-hover" href="/pricing">Pricing</a></li>
 			</ul>
 		</div>
